<resources>
    <string name="app_name">File Helper</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_exit">Exit</string>
    <string name="crixec">Loneliness is free</string>
    <string name="nav_file_browser">File Browser</string>
    <string name="nav_file_search">File Search</string>
    <string name="nav_file_suffix_replace">Suffix Replace</string>
    <string name="nav_file_rename">Batch Rename</string>
    <string name="nav_file_content_replace">Content Replace</string>
    <string name="nav_file_merge">Batch Merge</string>
    <string name="nav_file_split">Batch Split</string>
    <string name="nav_file_compare">File Compare</string>
    <string name="nav_share">Share</string>
    <string name="nav_about">About</string>
    <string name="other">Other</string>
    <string name="start_search">Start Search</string>
    <string name="stop_search">Stop Search</string>
    <string name="input_start_path">Start Path</string>
    <string name="input_search_content">Search Content</string>
    <string name="search_result">Search Result</string>
    <string name="search_content_cannot_be_empty">File name cannot be empty</string>
    <string name="path_cannot_be_empty">Path cannot be empty</string>
    <string name="create">Create</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="create_succeed">Create Succeed</string>
    <string name="create_failed">Create Failed</string>
    <string name="file_content">File Content</string>
    <string name="search_types">Search Types</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="delete_succeed">Delete Succeed</string>
    <string name="warning">Warning</string>
    <string name="need_storage_permission">Need storage permission</string>
    <string name="open">Open</string>
    <string name="file_info">File Info</string>
    <string name="file_name">File Name</string>
    <string name="file_path">File Path</string>
    <string name="is_symlink">Is Symlink</string>
    <string name="real_path">Real Path</string>
    <string name="file_size">File Size</string>
    <string name="file_md5">MD5</string>
    <string name="computing">Computing</string>
    <string name="file_sha">SHA</string>
    <string name="readable">Readable</string>
    <string name="writable">Writable</string>
    <string name="executable">Executable</string>
    <string name="last_modified">Last Modified</string>
    <string name="copied">Copied</string>
    <string name="action_goto">Goto</string>
    <string name="target_path">Target Path</string>
    <string name="go">GO</string>
    <string name="not_exist">Not Exist:</string>
    <string name="wildcard_match">Wildcard Match</string>
    <string name="contain_files">Contains folders or files</string>
    <string name="replace_content">Replace Content</string>
    <string name="start_replace">Start Replace</string>
    <string name="stop_replace">Stop Replace</string>
    <string name="add_new_paths_or_files">Add new paths or files</string>
    <string name="add">Add</string>
    <string name="content_cannot_be_empty">Content cannot be empty</string>
    <string name="add_failed">Add failed</string>
    <string name="start_merge">Start Merge</string>
    <string name="stop_merge">Stop Merge</string>
    <string name="input_output_filename">Input Output Filename</string>
    <string name="need_to_merge_files">Need to merge files</string>
    <string name="output_filename_cannot_be_empty">Output filename cannot be empty</string>
    <string name="add_files">Add files</string>
    <string name="merge_failed">Merge Failed</string>
</resources>
