<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/startPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:hint="@string/input_start_path">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/searchContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:layout_marginTop="10dp"
        android:hint="@string/input_search_file">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/startSearchButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:enabled="false"
            android:text="@string/start_search" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/stopSearchButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:enabled="false"
            android:text="@string/stop_search" />
    </LinearLayout>


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/search_types" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        android:id="@+id/rgSearchType"

        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rg_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:checked="true"
            android:text="@string/file" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rg_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/folder" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rg_file_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/file_content" />

    </RadioGroup>


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/search_result" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <ListView
        android:id="@+id/searchResultList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>